Added final draft of content

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,23 @@
 <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top navbar-inverse">
-    <div class="container">
+    <div class="container text-shadow">
 
         <ul class="nav navbar-nav f18">
             <li>
                 <a href="#what-is-it"></span>What is it?</a>
             </li>
-            <li>
-                <a href="#rules">Rules &amp; Guidelines</a>
-            </li>
+
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                    Rules &amp; Guidelines <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#team-formation">Team Formation</a></li>
+                    <li><a href="#registration-process">Registration Process</a></li>
+                    <li><a href="#rejection-criteria">Rejection Criteria</a></li>
+                    <li><a href="#presentations">Presentations</a></li>
+                    <li><a href="#schedule-timelines">Schedules &amp; Timelines</a></li>
+                    <li><a href="#final-demo">Final Demo Criteria</a></li>
+                </ul>
+
             <li>
                 <a href="#themes">Theme</a>
             </li>
