--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -42,7 +42,8 @@
                     <li>
                         Read <a href="#rules">rules and guidelines</a> to make sure your team is not rejected during
                         registration. <span
-                                class="registeru">Send out invitations from your Exzeo organization account</span>, those
+                                class="registeru">Send out invitations from your Exzeo organization account</span>,
+                        those
                         who are interested can join you that way.
                     </li>
                 </ul>
@@ -59,9 +60,8 @@
                     </li>
                     <li>
                         If no one has invited you, DO NOT WORRY. <span class="registeru">Create your own team</span>.
-                        Don't laugh. Throw the shyness
-                        away and get ready to knock others off. Don't give up. It is okay to loose than not fighting for
-                        it. After all, Knockathon is an internal event.
+                        Don't laugh. Throw the shyness away and get ready to knock others off. Don't give up. It is okay
+                        to loose than not fighting for it. After all, Knockathon is an internal event.
                     </li>
                     <li>
                         Read <a href="#rules">rules and guidelines</a> to make sure you understand and help others.
