--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -6,60 +6,196 @@
                 <h1 id="rules" class="text-shadow huge">Rules and Guidelines</h1>
             </div>
         </div>
-        <div class="row tk-anisette-petite">
-            <div class="col-md-8 col-md-offset-0 list">
-                <h2 class="medium">Team Formation</h2>
-                <ul>
-                    <li>3-4 members are required in a team. No more or less is accepted.</li>
-                    <li>Each team may include "Champ" (The one who codes and create) and "Hustlers" (the one who create
-                        mockups, screenflow, specify requirement and presents). The Champs and Hustlers and merely roles
-                        that one would assume of, what that person's real capabilities does not matter or not taken into
-                        account. 000
-                    </li>
-                    <li>Teams have to be registered on Registration desk before event starts.</li>
-                    <li>The office remains closed post 6.30 pm, for non-participants.</li>
-                    <li>Idea presentation will start on Saturday (9/12) at 6.30 pm, member can leave once their
-                        presentation is over.
-                    </li>
-                    <li>Female members are allowed (What is "allowed" here)to leave for home on friday night and can
-                        support from home. However they need to be present for mockup presentation on saturday morning.
-                    </li>
-                </ul>
+        <div class="tk-anisette-petite">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-0 list">
+
+                </div>
             </div>
-        </div>
-        <div class="row tk-anisette-petite">
-            <div class="col-md-8 col-md-offset-0 list">
-                <h2 class="medium">Facilities</h2>
-                <ul>
-                    <li>Dinner, Snacks, Breakfast and lunch will be arranged for all members who'll stay in the
-                        office.
-                    </li>
-                    <li>Teams can use any available space in the office premise.</li>
-                    <li>Only the participants will receive the Exzeo Knockathon T-shirts.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="row pd-5 tk-anisette-petite">
-            <div class="col-md-8 col-md-offset-0 list">
-                <h2 class="medium">Facilities</h2>
-                <ul>
-                    <li>The ideas will be evaluated by an independent panel of judges.</li>
-                    <li>There will be two presentations - First, a concept presentation, team can use screen flow
-                        diagram or prototype to showcase their idea. This will be done past half time. Finally, there
-                        will be final evaluation presentation, where team will demonstrate their end product.
-                    </li>
-                    <li>All members must be present during final presentation.</li>
-                    <li>Judges will hold the rights to reject an idea after concept evaluation.</li>
-                    <li>The quality of the implementation is not considered to be 100% bug free.</li>
-                    <li>The final demo of the working product will take place on Monday.</li>
-                    <li>Code commits post 12:00 AM on Saturday will not be accepted.</li>
-                    <li>70% of the scoring will be based on Panel's opinion, rest 30% will be decided based on Audience
-                        Vote.
-                    </li>
-                </ul>
-            </div>
-        </div>
+
+            <div class="row">
+
+                <div id="team-formation" class="col-md-8 col-md-offset-0 list">
+                    <h2 class="medium">Team Formation</h2>
+                    <ul>
+                        <li>
+                            Each team should have minimum of 3 and maximum of 4 team members. This is very important.
+                        </li>
+                        <li>
+                            Each team should have people playing two different roles &ndash;
+                            <ul>
+                                <li><strong>Champs</strong>&ndash; those who knows how to create something such as
+                                    writing code or making maps. The technical person role.
+                                </li>
+                                <li>
+                                    <strong>Hustlers</strong>&ndash; those who can plan, ideate, present, design etc.,
+                                    The non-technical person role.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Our recommendation is to form, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3
+                            champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
+                        </li>
+                        <li id="sec-office-stay">
+                            Also it is mandatory for team to stay in office during the Knockathon event. Ladies who are
+                            willing stay during night are welcome. But if they prefer to hack from home, that is fine
+                            too.
+                        </li>
+                    </ul>
+                </div>
+
+                <div id="registration-process" class="col-md-8 col-md-offset-0 list">
+                    <h2 class="medium">Registration Process</h2>
+                    <ul>
+                        <li>
+                            As highlighted in <a href="#register-now">register now</a> section you should first of all
+                            have a team and team members identified before the registration opens. This means you're, in
+                            a
+                            way, have created your team as an Exzeo organization.
+                        </li>
+                        <li>
+                            Once the registration desk opens at Friday the 11th Sep around 6:30 PM, you and your team
+                            will submit a form with your team names and their roles, Github repo name to keep your code
+                            or any other files.
+                        </li>
+                        <li>
+                            Don't forget to collect your swags. It is only for participants. :)
+                        </li>
+                    </ul>
+                </div>
 
 
+                <div id="rejection-criteria" class="col-md-8 col-md-offset-0 list">
+                    <h2 class="medium">Rejection Criteria</h2>
+                    <ul>
+                        <li>
+                            So, the Knockathon starts at Friday the 11th 6:30 PM and ends at Sunday 12:01 AM
+                            (mid-night).
+                            Any code committed into your Github repo after Sunday will rejected for your final build.
+                            But there can be extreme cases. You may want to find legitimate reasons to convince
+                            Knockathon team.
+                        </li>
+                        <li>
+                            During the concept demo, we merely look for some scribbled designs in a paper. Don't waste
+                            your time on making PPT or some neat design. However, if you don't have any solid idea, you
+                            can also provide the options you have in front you. <p><br/>In case, your idea collides with
+                                someones or a rip-off of some well-known app it will be rejected.</p>
+                        </li>
+                        <li>
+                            During the event, it is mandatory for team members (<a href="#sec-office-stay">except for
+                                ladies</a>) to stay in office. If found otherwise, it may be a reason for rejection.
+                        </li>
+                    </ul>
+                </div>
+
+                <div id="presentations" class="col-md-8 col-md-offset-0 list">
+                    <h2 class="medium">Presentations</h2>
+                    <ul>
+                        <li>
+                            There will be three presentations &ndash;
+                            <ul>
+                                <li><strong>Idea Presentation</strong> &ndash; This is going to be a very quick, punch
+                                    line presentation on your idea to other teams. This presentation is to avoid
+                                    confusions among other teams if they ended up thinking the same idea of yours.
+                                </li>
+                                <li>
+                                    <strong>Concept Presentation</strong> &ndash; You will present the concept on
+                                    Saturday the 12th Sep @ 7:30 AM to 9:00 AM. There may be eliminations if found the
+                                    idea is copied or not complying with theme. You always rethink a new one, it means,
+                                    the idea could be rejected but team can go back to drawing board.
+                                </li>
+                                <li>
+                                    <strong>Demo Day</strong> &ndash; You will demo your app / product on Monday the
+                                    14th Sep in front of all our colleagues. And they are going to vote to show their
+                                    love.
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
+
+                <div id="schedule-timelines" class="col-md-8 col-md-offset-0 list">
+                    <h2 class="medium">Schedule &amp; Timelines</h2>
+                    <table class="table table-striped" style="font-size: 14px!important;">
+                        <tr>
+                            <th>Day</th>
+                            <th>Time slot</th>
+                            <th>Remarks</th>
+                        </tr>
+                        <tr>
+                            <td class="info" rowspan="4">Fri, 11th</td>
+                            <td>06:30 PM - 07:00 PM</td>
+                            <td>Registrations desk open</td>
+                        </tr>
+                        <tr>
+                            <td>07:00 PM</td>
+                            <td>Opening Bell</td>
+                        </tr>
+                        <tr>
+                            <td>07:00 PM &ndash; 07:30 PM</td>
+                            <td>Team introductions to others</td>
+                        </tr>
+                        <tr>
+                            <td>07:30 PM &ndash; 07:00 AM (+1)</td>
+                            <td><code>Plan, Eat, Hack</code> <img
+                                        src="http://diwc.co.uk/wp-content/uploads/2015/06/icon_6393.png" height="32"
+                                        width="32"/><code>Plan, Eat, Hack</code></td>
+                        </tr>
+                        <tr>
+                            <td class="success" rowspan="5">Sat, 12th</td>
+                            <td>07:30 AM &ndash; 09:00 AM</td>
+                            <td><strong>Idea Mockup Presentation to Panel</strong></td>
+                        </tr>
+                        <tr>
+                            <td>09:00 AM &ndash; 11:00 AM</td>
+                            <td>Teams brain storms, place cards, planning phase</td>
+                        </tr>
+                        <tr>
+                            <td>10:30 AM &ndash; 06:30 PM</td>
+                            <td><code>Eat, Hack, Eat, Hack</code></td>
+                        </tr>
+                        <tr>
+                            <td>06:30 PM &ndash; 08:00 PM</td>
+                            <td><strong>Concept Presentation</strong></td>
+                        </tr>
+                        <tr>
+                            <td>08:00 PM &ndash; 11:59 PM</td>
+                            <td>No time to eat <code>Hack, hack, hack</code></td>
+                        </tr>
+                        <tr class="danger">
+                            <td>Mon, 14th</td>
+                            <td>11:00 AM &ndash; 01:00 PM</td>
+                            <td><strong>Demo Day</strong></td>
+                        </tr>
+                    </table>
+                </div>
+
+                <div id="final-demo" class="col-md-8 col-md-offset-0 list">
+                    <h2 class="medium">Final Demo Criteria</h2>
+                    <ul>
+                        <li>You should have a complete application that functions well. Bugs are okay but should not
+                            catch our eyes. Make sure you do a good job of hiding them.
+                        </li>
+                        <li>Note that all of your colleagues are going to vote and they are biased. However
+                            your presentation and quality of the app / web app should convince them to change their
+                            mind.
+                        </li>
+                        <li>
+                            We don't review the code or architecture you've used. Or whether you followed design
+                            principles nor unit tests. Don't waste your time making solid code rather focus on fine
+                            tuning user experience and presentation.
+                        </li>
+                        <li>
+                            Audience will be asking questions during your presentation, make sure entire team is
+                            answering questions. This shows how confidence your team is on the business of your app.
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
     </div>
 </div>
