--- a/views/partials/what-is.ejs
+++ b/views/partials/what-is.ejs
@@ -7,33 +7,44 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-anisette-petite medium text-shadow">
-                <p>
-                    Knockathon (or Hackathon, in general) is a very popular event in that computer programmers and
-                    others
-                    involved in software development and hardware development collobarate intensively to make something
-                    useful at end of the event.
+            <div class="col-md-8 col-md-offset-0 tk-anisette-petite">
+                <p class="text-info" style="border:1px solid #31708f; padding:4px;">
+                    Knockathon (or <a href="https://en.wikipedia.org/wiki/Hackathon" target="_blank">Hackathon</a>, in
+                    general) is a very popular event in that computer programmers and
+                    others involved in software development and hardware development <strong>collaborate
+                        intensively</strong> to create a software or a hardware or even massage a data that is useful
+                    for someone.
                 </p>
 
                 <p>
-                    Note the "intense" word.
+                    Note the "intense" word in above definition.
                 </p>
 
                 <p>
-                    Yes, as a participant, one has to demonstrate great focus and willing to take any shape in order get
-                    something useful done within a timeframe of 24-36 hours. It also means sleepless nights, lot energy
-                    drinks, fun etc., and obviously rewards.
+                    Yes, as a participant, one has to demonstrate great focus and willing to take any shape in order to
+                    get something useful done within a time frame of 24-36 hours. It also means sleepless nights, lot
+                    of energy drinks, fun and obviously rewards.
                 </p>
 
                 <p>
-                    Here is how we planned our Knockathon -
+                    The key to success is the IDEA. When you conceptualize an idea, keep in mind that you don't need an
+                    innovative one or at the same time a "copy-paste" idea.
                 </p>
-                <ul>
-                    <li>First and foremost, this event is for everyone. Not just programmers.</li>
-                    <li>Knockathon starts exactly at 6:30 PM on 11th Friday</li>
-                    <li>(explain process high level, wherever require link rules)</li>
-                    <li>...</li>
-                </ul>
+
+                <p>
+                    All you need is a winning idea. The one that you can complete with the pressure that builds up when
+                    time goes by and odds of loosing the game due to missing use cases etc.,
+                </p>
+
+                <p>
+                    Most of all, it is an overall performance of a team starting from Ideation to Presentation.
+                </p>
+
+                <p>
+                    Great. Now, get over to Google and search for some inspirations. Most importantly, make sure you
+                    thoroughly understand <a href="#rules">rules and guidelines</a>.
+                </p>
+
             </div>
         </div>
     </div>
