--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,9 +56,9 @@
 }
 
 body {
-    padding-top: 70px;
     position: relative;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .text-shadow {
@@ -134,6 +134,15 @@ body {
 }
 
 .list li {
-    line-height: 22px!important;
-    margin-top: 20px!important;
+    line-height: 22px !important;
+    margin-top: 20px !important;
+}
+
+.medium {
+    font-size: 18px !important;
+    font-weight: bolder;
+}
+
+.highlight {
+    background-color: #FCFC9F;
 }
