--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,32 @@
 <title>Exzeo Knockathon 2015</title>
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
 <script>
+    (function (d) {
+        var config = {
+                    kitId: 'tco4ujm',
+                    scriptTimeout: 3000,
+                    async: true
+                },
+                h = d.documentElement, t = setTimeout(function () {
+                    h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+                }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a;
+        h.className += " wf-loading";
+        tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+        tk.async = true;
+        tk.onload = tk.onreadystatechange = function () {
+            a = this.readyState;
+            if (f || a && a != "complete" && a != "loaded")return;
+            f = true;
+            clearTimeout(t);
+            try {
+                Typekit.load(config)
+            } catch (e) {
+            }
+        };
+        s.parentNode.insertBefore(tk, s)
+    })(document);
+</script>
+<script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
@@ -17,20 +43,30 @@
     ga('send', 'pageview');
 
 </script>
+
 <link rel="stylesheet" href="/stylesheets/timer.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
 <script src="/javascripts/timer.js"></script>
 <script src="https://use.typekit.net/tco4ujm.js"></script>
-<script>try {
-        Typekit.load({async: true});
-    } catch (e) {
-    }</script>
 <script>
 
     var _MS_PER_DAY = 1000 * 60 * 60 * 24;
 
+    // Extend jquery with flashing for elements
+    $.fn.flash = function (duration, iterations) {
+
+        duration = duration || 200; // Default to 1 second
+        iterations = iterations || 1; // Default to 1 iteration
+        var iterationDuration = Math.floor(duration / iterations);
+
+        for (var i = 0; i < iterations; i++) {
+            this.fadeOut(iterationDuration).fadeIn(iterationDuration);
+        }
+
+        return this;
+    };
 
     // a and b are javascript Date objects
     function dateDiffInDays(a, b) {
@@ -44,6 +80,13 @@
     $(document).ready(function () {
         timerSetup();
         elementSize();
+
+        $(window).on("hashchange", function () {
+            window.scrollTo(window.scrollX, window.scrollY - 100);
+            if (location.hash.lastIndexOf('sec') > 0) {
+                $(location.hash).flash(200, 1);
+            }
+        });
     });
 
     $(window).bind("resize", elementSize);
@@ -56,7 +99,7 @@
         var target = new Date(2015, 8, 11, 6, 30, 0, 0);
         var time = start.getTime() + dateDiffInDays(start, target) * 24 * 60 * 60 * 1000;
 
-        var underline = function(val) {
+        var underline = function (val) {
             return '<span class="themeu">' + val + '</span>'
         };
 
@@ -68,7 +111,7 @@
                 message += underline(days) + " day" + ( days == 1 ? '' : 's' ) + ", ";
                 message += underline(hours) + " hour" + ( hours == 1 ? '' : 's' ) + ", ";
                 message += underline(minutes) + " minute" + ( minutes == 1 ? '' : 's' ) + " and ";
-                message += underline(seconds) + " second" + ( seconds == 1 ? '' : 's' ) ;
+                message += underline(seconds) + " second" + ( seconds == 1 ? '' : 's' );
 
                 message += " left!";
 
@@ -86,9 +129,7 @@
         var theme = $(".theme");
         var whatis = $(".what-is-it");
 
-        var docuHeight = $(window).height();
-
-        var newHeight = docuHeight;// - navbar.height();
+        var newHeight = $(window).height();
 
         if (entry.height() <= newHeight)
             entry.height(newHeight);
@@ -115,5 +156,6 @@
 
         $("#time-div").css("marginTop", newHeight / 4);
     }
+
 </script>
 
