--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -39,8 +39,8 @@
                         </li>
                         <li id="sec-office-stay">
                             Also it is mandatory for team to stay in office during the Knockathon event. Ladies who are
-                            willing stay during night are welcome. But if they prefer to hack from home, that is fine
-                            too.
+                            willing stay in office during night are welcome. But if they prefer to hack from home, that
+                            is fine too.
                         </li>
                     </ul>
                 </div>
