--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-0 tk-anisette-petite list text-shadow">
+            <div class="col-md-8 col-md-offset-0 tk-anisette-petite list">
                 <p>
                     OK. So you're interested.
                 </p>
