--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -70,9 +70,8 @@
                     <h2 class="medium">Rejection Criteria</h2>
                     <ul>
                         <li>
-                            So, the Knockathon starts at Friday the 11th 6:30 PM and ends at Sunday 12:01 AM
-                            (mid-night).
-                            Any code committed into your Github repo after Sunday will rejected for your final build.
+                            So, the Knockathon starts at Friday the 11th 6:30 PM and ends at Sunday 11:59 PM (mid-night). Any code
+                            committed into your Github repo after Sunday will rejected for your final build.
                             But there can be extreme cases. You may want to find legitimate reasons to convince
                             Knockathon team.
                         </li>
