--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -71,7 +71,7 @@
                     <ul>
                         <li>
                             So, the Knockathon starts at Friday the 11th 6:30 PM and ends at Sunday 11:59 PM (mid-night). Any code
-                            committed into your Github repo after Sunday will rejected for your final build.
+                            committed into your Github repo after Sunday will be rejected for your final build.
                             But there can be extreme cases. You may want to find legitimate reasons to convince
                             Knockathon team.
                         </li>
