Added discussion section

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,6 @@
 <% include ../partials/rules.ejs %>
 <% include ../partials/theme.ejs %>
 <% include ../partials/register.ejs %>
-
+<% include ../partials/discuss.ejs%>
 </body>
 </html>
