--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,6 +21,11 @@
             <li>
                 <a href="#themes">Theme</a>
             </li>
+
+            <li>
+                <a href="#discuss">Discuss</a>
+            </li>
+
         </ul>
 
         <ul class="nav navbar-nav navbar-right f18 ">
