Updated rules and regulations

--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -29,16 +29,16 @@
                                 </li>
                                 <li>
                                     <strong>Hustlers</strong>&ndash; those who can plan, ideate, present, design etc.,
-                                    The non-technical person role.
+                                    In other words, the non-technical role.
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            Our recommendation is to form, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3
+                            We recommend, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3
                             champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
                         </li>
                         <li id="sec-office-stay">
-                            Also it is mandatory for team to stay in office during the Knockathon event. Ladies who are
+                            Also it is mandatory for team to stay in office during the Knockathon event till Saturday's Presentation. Ladies who are
                             willing stay in office during night are welcome. But if they prefer to hack from home, that
                             is fine too.
                         </li>
@@ -50,12 +50,10 @@
                     <ul>
                         <li>
                             As highlighted in <a href="#register-now">register now</a> section you should first of all
-                            have a team and team members identified before the registration opens. This means you're, in
-                            a
-                            way, have created your team as an Exzeo organization.
+                            have a team and team members identified before the registration opens. This means you'll have to register your teams as new Organizations on tryexzeo.com.
                         </li>
                         <li>
-                            Once the registration desk opens at Friday the 11th Sep around 6:30 PM, you and your team
+                            Once the registration desk opens on Friday, 11th Sep at 6:30 PM, you and your team
                             will submit a form with your team names and their roles, Github repo name to keep your code
                             or any other files.
                         </li>
@@ -70,16 +68,16 @@
                     <h2 class="medium">Rejection Criteria</h2>
                     <ul>
                         <li>
-                            So, the Knockathon starts at Friday the 11th 6:30 PM and ends at Sunday 11:59 PM (mid-night). Any code
-                            committed into your Github repo after Sunday will be rejected for your final build.
+                            Knockathon starts on Friday, 11th Sep at 6:30 PM and ends on Saturday at 11:59 PM (mid-night). Any code
+                            committed into your Github repo after 11.59 Saturday will be rejected for your final build.
                             But there can be extreme cases. You may want to find legitimate reasons to convince
                             Knockathon team.
                         </li>
                         <li>
-                            During the concept demo, we merely look for some scribbled designs in a paper. Don't waste
+                            During the concept demo on Saturday Morning, we merely look for some scribbled designs on a paper. Don't waste
                             your time on making PPT or some neat design. However, if you don't have any solid idea, you
                             can also provide the options you have in front you. <p><br/>In case, your idea collides with
-                                someones or a rip-off of some well-known app it will be rejected.</p>
+                                someones or a rip-off of some well-known app it will be rejected or advised to change.</p>
                         </li>
                         <li>
                             During the event, it is mandatory for team members (<a href="#sec-office-stay">except for
@@ -94,9 +92,9 @@
                         <li>
                             There will be three presentations &ndash;
                             <ul>
-                                <li><strong>Idea Presentation</strong> &ndash; This is going to be a very quick, punch
+                                <li><strong>Idea Presentation</strong> &ndash; An hour after registeration. This is going to be a very quick, punch
                                     line presentation on your idea to other teams. This presentation is to avoid
-                                    confusions among other teams if they ended up thinking the same idea of yours.
+                                    confusions among other teams if they ended up thinking the same idea as of yours.
                                 </li>
                                 <li>
                                     <strong>Concept Presentation</strong> &ndash; You will present the concept on
@@ -108,6 +106,7 @@
                                     <strong>Demo Day</strong> &ndash; You will demo your app / product on Monday the
                                     14th Sep in front of all our colleagues. And they are going to vote to show their
                                     love.
+                                    Note: Audience vote accounts for 30% of the total score. The Voting will be anonymous.
                                 </li>
                             </ul>
                         </li>
@@ -123,7 +122,7 @@
                             <th>Time slot</th>
                             <th>Remarks</th>
                         </tr>
-                        <tr>
+                        <tr>Point #1: So, the Knockathon starts at Friday the 11th 6:30 PM and ends on Saturday 11:59 pm (near mid-night).
                             <td class="info" rowspan="4">Fri, 11th</td>
                             <td>06:30 PM - 07:00 PM</td>
                             <td>Registrations desk open</td>
@@ -134,7 +133,7 @@
                         </tr>
                         <tr>
                             <td>07:00 PM &ndash; 07:30 PM</td>
-                            <td>Team introductions to others</td>
+                            <td>Team introductions to others, Followed by idea presentation</td>
                         </tr>
                         <tr>
                             <td>07:30 PM &ndash; 07:00 AM (+1)</td>
@@ -161,12 +160,12 @@
                         </tr>
                         <tr>
                             <td>08:00 PM &ndash; 11:59 PM</td>
-                            <td>No time to eat <code>Hack, hack, hack</code></td>
+                            <td>Make final chnages if you feel like, or leave</td>
                         </tr>
                         <tr class="danger">
                             <td>Mon, 14th</td>
                             <td>11:00 AM &ndash; 01:00 PM</td>
-                            <td><strong>Demo Day</strong></td>
+                            <td><strong>Final Demo</strong></td>
                         </tr>
                     </table>
                 </div>
