--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -154,7 +154,7 @@
                         </tr>
                         <tr>
                             <td>08:00 PM &ndash; 11:59 PM</td>
-                            <td>Make final chnages if you feel like, or leave</td>
+                            <td>Make final changes if you feel like, or leave</td>
                         </tr>
                         <tr class="danger">
                             <td>Mon, 14th</td>
