Fixed highlight issue

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,7 +45,8 @@
 </script>
 
 <link rel="stylesheet" href="/stylesheets/timer.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
 <script src="/javascripts/timer.js"></script>
@@ -54,16 +55,19 @@
 
     var _MS_PER_DAY = 1000 * 60 * 60 * 24;
 
-    // Extend jquery with flashing for elements
     $.fn.flash = function (duration, iterations) {
 
-        duration = duration || 200; // Default to 1 second
-        iterations = iterations || 1; // Default to 1 iteration
-        var iterationDuration = Math.floor(duration / iterations);
+        var el = this;
+        this.animate({
+            backgroundColor: "#ffffcc"
+        }, 1500, function () {
+            setTimeout(function () {
+                el.animate({
+                    backgroundColor: '#e9edec'
+                }, 1500);
+            }, 500);
+        });
 
-        for (var i = 0; i < iterations; i++) {
-            this.fadeOut(iterationDuration).fadeIn(iterationDuration);
-        }
 
         return this;
     };
