Content correction as suggested by piyush

--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -71,7 +71,7 @@
                             During the concept demo on Saturday Morning, we merely look for some scribbled designs on a paper. Don't waste
                             your time on making PPT or some neat design. However, if you don't have any solid idea, you
                             can also provide the options you have in front you. <p><br/>In case, your idea collides with
-                                someones or a rip-off of some well-known app it will be rejected or advised to change.</p>
+                                someone's or a rip-off of some well-known app it will be rejected or advised to change.</p>
                         </li>
                         <li>
                             During the event, it is mandatory for team members (<a href="#sec-office-stay">except for
@@ -86,7 +86,7 @@
                         <li>
                             There will be three presentations &ndash;
                             <ul>
-                                <li><strong>Idea Presentation</strong> &ndash; An hour after registeration. This is going to be a very quick, punch
+                                <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going to be a very quick, punch
                                     line presentation on your idea to other teams. This presentation is to avoid
                                     confusions among other teams if they ended up thinking the same idea as of yours.
                                 </li>
