--- a/views/partials/what-is.ejs
+++ b/views/partials/what-is.ejs
@@ -33,7 +33,7 @@
 
                 <p>
                     All you need is a winning idea. The one that you can complete with the pressure that builds up when
-                    time goes by and odds of loosing the game due to missing use cases etc.,
+                    time goes by and odds of losing the game due to missing use cases etc.,
                 </p>
 
                 <p>
